--- a/Evaluation/don.html
+++ b/Evaluation/don.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="WWF, wwf, don, association, protection animale, danger, animaux"/>
+    <meta name="Revisit-After" content="15 days">
+    <meta name="Robots" content="all">
+    <meta name="Rating" content="general">
+    <meta name="Distribution" content="global">
+    <meta name="Category" content="animals">
+
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
      crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Dons</title>
+    <title>Faire un don à WWF France</title>
 </head>
 <body style="background: rgb(255, 255, 250);">
+
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
             <a class="navbar-brand" href="index.html">
@@ -32,6 +41,8 @@
                 </ul>
             </div>  
     </nav>
+
+
     <!-- BREADCRUMB -->
     <div aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -60,6 +71,7 @@
                         <label for="form-date">Date de fin de validité</label>
                         <input type="text" class="form-control" id="form-date" placeholder="12/21" value="" required>
                     </div>
+
 
                                 <!--  POP UP CCV  -->
                             <div id="ccvInfoHelp">
@@ -141,6 +153,7 @@
               </form>
     </div>  
 
+
      <!--FOOTER-->
     <footer class="row d-flex justify-content-center mt-5">
         <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
@@ -149,8 +162,10 @@
         </div>
         <p class="text-center mb-1" id="signature">2020</p>
         <p class="text-center text-justify" id="info">
-            66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu. <br>
-            Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique. <br>
+            66 % du montant de votre don au profit du <span itemscope itemtype="http://schema.org/Event" itemref="_description2">
+                <span itemprop="name">WWF</span></span> peut être déduit de votre impôt sur le revenu. <br>
+            Le Fonds Mondial pour la Nature France, dit <span itemscope itemtype="http://schema.org/Event" itemref="_description2">
+                <span itemprop="name">WWF France</span></span> est une Fondation reconnue d'utilité publique. <br>
             Numéro d’enregistrement et SIREN : 302 518 667.
         </p>
         <p class="text-center text-justify" id="etoile">
@@ -160,6 +175,9 @@
             Crédits : Adobe Stock
         </p>
     </footer> 
+
+    <noscript>Pour fonctionner correctement, ce site web a besoin que JavaScript soit activé.</noscript>
+
 </body>
     <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
